# simtrade

./: .gitignore  README.md  pyproject.toml  requirements.txt
.streamlit/: config.toml  secrets.toml.template
scripts/: demo.py  run_scheduler.py
src/simtrade/: __init__.py  cli.py  platform.py
src/simtrade/db/: __init__.py  schema.py  schema.sql
src/simtrade/l1_data/: __init__.py  market_data.py  storage.py
src/simtrade/l2_indicators/: __init__.py  indicators.py
src/simtrade/l3_orders/: __init__.py  engine.py  orders.py
src/simtrade/l4_positions/: __init__.py  manager.py
src/simtrade/l5_feedback/: __init__.py  performance.py
src/simtrade/l6_learning/: __init__.py  attribution.py  decision.py  reconcile.py  tags.py
src/simtrade/l7_discovery/: __init__.py  agent_explainer.py  decay.py  experiments.py  meta_skills.py  scanner.py
tests/: conftest.py  test_l1_storage.py  test_l2_indicators.py  test_l3_orders.py  test_l4_positions.py  test_l5_feedback.py  test_l6_learning.py  test_l7_agent_explainer.py  test_l7_discovery.py
ui/: streamlit_app.py
ui/assets/: README.md
